# routes/index.js
@@ -3,6 +3,7 @@ const auth = require('./auth');
 const uploads = require('./uploads');
 const squads = require('./squads');
 const tools = require('./tools');
+const dashboards = require('./dashboards');
 
 module.exports = (router) => {
     users(router);
@@ -10,4 +11,5 @@ module.exports = (router) => {
     uploads(router);
     squads(router);
     tools(router);
+    dashboards(router);
 };
